package enums

/**
 * SpaceType -Type spaces
 */
enum class SpaceType {
    NORMAL,
    DISABLED,
    LOADING_UNLOADING
}
