package enums

/**
 * Status del Parking Space
 */
enum class StatusParkingSpace {
    AVAILABLE,
    OCCUPIED,
    RESERVED,
    MAINTENANCE
}